--- a/index.html
+++ b/index.html
@@ -97,21 +97,15 @@
 <h2><a href="images/wans_6th.pdf" target="_blank"><img src="images/wans_6th.jpg" alt="what's new" width="130" height="184" class="poster" /></a></h2>
 poster-->
 
+<p class="newsDate">The 8th World Academy of Nursing Science (WANS) Congress in Conjunction with </p> 
+<p class="newsText">The 5th International Conference of Indonesian National Nurses Association (ICINNA) </p>
+
 <p class="newsDate">Introduce and welcome new Chairperson of </p> 
 <p class="newsText">WANS Committee: <br> Associate Professor Dr Tassana Boontong , the President of Thailand Nursing and Midwifery was elected by the Board of WANS 
 	on December 8, 2021 to be the Chairperson of WANS Committee effective on January 1, 
 	2022 to December 31, 2023. Congratulation!</p>
 
-<p class="newsDate">2022.05.20</p>
-<p class="newsText">Early Career Researchers' Experiences during the COVID-19 Pandemic
-	will be hold on August. 9, 2022 via zoom meeting<br />
-<a href="news/index.html" > >> More Info.</a></p>
 
-<p class="newsDate">2021.11.06</p>
-<p class="newsText">The 7th International Nursing Research Conference of WANS will be held in
-Oct. 18-19, 2022 at Taipei, Taiwan. &nbsp;<br />
-  <a href="news/index.html" > >> More Info.</a></p>		
-	
 
 
 
@@ -120,9 +114,16 @@ Oct. 18-19, 2022 at Taipei, Taiwan. &nbsp;<br />
 
 <div class='prevNews'>
 
-
-
-
+	<p class="newsDate">2022.05.20</p>
+	<p class="newsText">Early Career Researchers' Experiences during the COVID-19 Pandemic
+		will be hold on August. 9, 2022 via zoom meeting<br />
+	<a href="news/index.html" > >> More Info.</a></p>
+	
+	<p class="newsDate">2021.11.06</p>
+	<p class="newsText">The 7th International Nursing Research Conference of WANS will be held in
+	Oct. 18-19, 2022 at Taipei, Taiwan. &nbsp;<br />
+	  <a href="news/index.html" > >> More Info.</a></p>		
+		
 
 <p class="newsDate">2009.10.07</p>
 <p class="newsText">The World Academy of Nursing Science was founded on September 18, 2009.<br />
