--- a/index.html
+++ b/index.html
@@ -113,6 +113,13 @@ poster-->
 <p class="expandBtn newsDate"><a class='faq_question' href="javascript:void(0);" onfocus="this.blur()">Click here for Older Posts</a></p>
 
 <div class='prevNews'>
+	<p class="newsDate">The 8th World Academy of Nursing Science (WANS) Congress in Conjunction with </p> 
+    <p class="newsText">The 5th International Conference of Indonesian National Nurses Association (ICINNA) </p>
+
+    <p class="newsDate">Introduce and welcome new Chairperson of </p> 
+    <p class="newsText">WANS Committee: <br> Associate Professor Dr Tassana Boontong , the President of Thailand Nursing and Midwifery was elected by the Board of WANS 
+	on December 8, 2021 to be the Chairperson of WANS Committee effective on January 1, 
+	2022 to December 31, 2023. Congratulation!</p>
 
 	<p class="newsDate">2022.05.20</p>
 	<p class="newsText">Early Career Researchers' Experiences during the COVID-19 Pandemic
@@ -123,21 +130,6 @@ poster-->
 	<p class="newsText">The 7th International Nursing Research Conference of WANS will be held in
 	Oct. 18-19, 2022 at Taipei, Taiwan. &nbsp;<br />
 	  <a href="news/index.html" > >> More Info.</a></p>		
-		
-
-<p class="newsDate">2009.10.07</p>
-<p class="newsText">The World Academy of Nursing Science was founded on September 18, 2009.<br />
-<a href="confe/1st/slides/index.html">&gt;&gt; Photo </a><br />
-<a href="news/091005_2.html">&gt;&gt; Congratulatory addresses</a></p>
-
-<p class="newsDate">2020.6.12</p>
-<p class="newsText">Dr. Noriko Katada reelected as the Chairperson of the board member.&nbsp;<br />
-  <a href="news/index.html" > >> More Info.</a></p>
-
-<p class="newsDate">2020.12. 23</p>
-<p class="newsText">Japan Academy of Critical Care Nursing newly joins WANS in 2020. &nbsp;<br />
-  <a href="news/index.html" > >> More Info.</a></p>	
-
 
 </div>
 
